--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="ticketing">پشتیبانی</string>
 
     <string name="date">تاریخ</string>
+    <string name="per_article">"مقالات "</string>
 
 </resources>
